--- a/Annexes.tex
+++ b/Annexes.tex
@@ -6,6 +6,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Dérivation des équations pressions/flux du modèle}
+\label{sec:deriveq}
 Lors de la définition de l’équation de conservation de la quantité de mouvement, nous avons
 évoqué la situation dans les connexions en Y (un tube se subdivise en deux). Nous décrirons ici le détail
 du calcul permettant d’aboutir à l’équation correspondante dans cette situation.
