--- a/Chapitre7.tex
+++ b/Chapitre7.tex
@@ -3,6 +3,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{Cartographie quantitative de susceptibilité magnétique}
+\label{chap:qsm}
 	\minitoc
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -586,6 +587,7 @@ la phase et la magnitude qui seront ensuite sauvegardées au format nifti.\\
 %%%
 %%%
 \subsection{Calcul de la carte de susceptibilité magnétique}
+\label{sec:calcsusc}
 Comme il a été montré dans les chapitres précédents (voir~\ref{sec:champsusc}), il existe de nombreux
 algorithmes permettant d’aboutir à une carte de susceptibilité quantitative. Le choix d’une approche spécifique se fait sur le temps de reconstruction, la présence d’artefacts, et la difficulté
 d’implémentation. Une fois la méthode choisit une optimisation doit être faite sur les paramètres de
