--- a/Main.tex
+++ b/Main.tex
@@ -49,7 +49,7 @@
 \jurye{M. Christophe Goze-Bac}{DR CNRS, L2C}{Représentant de l'ED}
 \juryf{Mme. Agnès Malgouyres }{Responsable AM, Siemens}{Invitée}
 \juryg{M. Patrice Mollard}{DR CNRS, IGF}{Invité}
-\jurye{M. Nicolas Menjot de Champfleur}{MCU-PH, INM}{Invité}
+\juryh{M. Nicolas Menjot de Champfleur}{MCU-PH, INM}{Invité}
 \ecole{Université de Montpellier}
 
 % Méta-données du PDF
