--- a/Preambule.tex
+++ b/Preambule.tex
@@ -30,7 +30,9 @@
 \usepackage{listings}
 \usepackage{array}
 \usepackage{tabularx}
-
+\usepackage{pdflscape}
+\usepackage{afterpage}
+\usepackage{capt-of}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %% Réglage des fontes et typo    
