--- a/jeremythesebib.bib
+++ b/jeremythesebib.bib
@@ -192,10 +192,10 @@ year = {2007}
 }
 
 @MISC{ timeflighteffects,
-author       = {mriquestions.com}, 
-title        = {Time of flight effects - Qustions and answers}, 
-howpublished = {mriquestions.com}, 
-year         = {2015}
+author       = {Elster, A. D.}, 
+title        = {Time of flight effects - Questions and answers in MRI}, 
+howpublished = {\url{http://http://mri-q.com/time-of-flight-effects.html}}, 
+year         = {2014}
 }
 
 @article{Young1987,
@@ -2320,7 +2320,7 @@ year = {2011}
 }
 
 @article{Hoult2000,
-abstract = {Confusion exists over the application of the Principle of Reciprocity to NMR signal strength calculations when wavelength in a sample is comparable to the latter's size. A simple and easily reproduced bench experiment that validates the principle is therefore described. Building on the experimental results, elementary mathematics are employed to derive simple equations for the B1 fields in both the negatively and the positively rotating frames. Using these equations, the reader is then guided through the steps needed to deduce correctly the signal received in an NMR experiment. The article should serve as a resource for those attempting signal strength calculations. © 2000 John Wiley \& Sons, Inc. Concepts Magn Reson 12: 173–187, 2000},
+abstract = {Confusion exists over the application of the Principle of Reciprocity to NMR signal strength calculations when wavelength in a sample is comparable to the latter's size. A simple and easily reproduced bench experiment that validates the principle is therefore described. Building on the experimental results, elementary mathematics are employed to derive simple equations for the B1 fields in both the negatively and the positively rotating frames. Using these equations, the reader is then guided through the steps needed to deduce correctly the signal received in an NMR experiment. The article should serve as a resource for those attempting signal strength calculations. © 2000 John Wiley \& Sons, Inc. Concepts Magn Reson 12: 173–187, 2000},
 author = {Hoult, D. I.},
 doi = {10.1002/1099-0534(2000)12:4<173::AID-CMR1>3.0.CO;2-Q},
 isbn = {1043-7347},
@@ -2712,12 +2712,82 @@ volume = {18},
 year = {1999}
 }
 
+@article{Takano1999,
+abstract = {We present our clinical experience with dynamic contrast-enhanced MR angiography (MRA) with subtraction for assessing intracranial vascular abnormalities. Ten patients with various cerebrovascular disorders underwent dynamic contrast-enhanced MRA on a 1.0-T system. Thirty sections (2 mm) were acquired in 29-30 s. Maximum intensity projection images and subtracted source images were compared with those obtained by conventional angiography. In all cases, the presence or absence of abnormalities in the targeted vessels, as well as the morphology of the sagittal sinuses, was clearly visualized as in conventional angiography, without any obstructions such as hyperintense hematomas or thrombi, or intraluminal turbulence. Although the temporal and spatial resolutions with current hardware are insufficient, these preliminary results suggest that dynamic contrast-enhanced MRA with subtraction may be useful for assessing vascular lesions with hemorrhage or thrombus, and the dural sinuses.},
+author = {Takano, K. and Utsunomiya, H. and Ono, H. and Okazaki, M. and Tanaka, A.},
+doi = {10.1007/s003300050946},
+isbn = {0938-7994},
+issn = {09387994},
+journal = {European Radiology},
+keywords = {Brain diseases,Contrast media,Gadolinium,Magnetic resonance angiography},
+number = {9},
+pages = {1909--1912},
+pmid = {10602974},
+title = {{Dynamic contrast-enhanced subtraction MR angiography in intracranial vascular abnormalities}},
+volume = {9},
+year = {1999}
+}
 
+@misc{Sohn2003,
+abstract = {NCE MRA can provide the authors with useful diagnostic information in patients suffering from intracranial vascular disease, often leading to improved or altered treatment decisions. Most centers have used 3D TOF for evaluation of stroke-the most common cerebral vascular disease. Because of slow and disturbed flow, conventional 3D TOF MRA tends to overestimate stenotic lesions and occluded arteries and this can confound neurovascular assessment in stroke patients. Post contrast 3D TOF techniques provide a more robust and more specific method for imaging the intracranial circulation that overcomes the drawbacks of conventional 3D TOF. In the setting of acute ischemic stroke, the authors have found that the combination of conventional and CE 3D TOF MRA improves their overall diagnostic ability. Dynamic and time-resolved CE MRA techniques have evolved rapidly. Time-resolved CE MRA, in particular, is emerging as a useful technique for imaging dynamic vascular pathologies such as AVMs. Unfortunately. time-resolved MRA of the intracranial circulation provides images with low spatial resolution and is currently limited to subsecond frame rate 2D acquisitions, and less than 2 seconds Frame rates for 3D acquisitions. Nevertheless, like in other vascular regions, CE MRA represents a milestone for non-invasive intracranial vascular imaging. The continuing development of CE MRA techniques and of new contrast agents will lessen the need for intra-arterial angiography in the future.},
+author = {Sohn, Chul H. and Sevick, Robert J. and Frayne, Richard},
+booktitle = {Magnetic Resonance Imaging Clinics of North America},
+doi = {10.1016/S1064-9689(03)00064-3},
+isbn = {1064-9689},
+issn = {10649689},
+number = {4},
+pages = {599--614},
+pmid = {15018113},
+title = {{Contrast-enhanced MR angiography of the intracranial circulation}},
+volume = {11},
+year = {2003}
+}
 
+@article{Offerman2011,
+abstract = {To evaluate the signal properties of 2D time of flight (TOF), quiescent-interval single-shot (QISS), ECG-gated 3D fast spin-echo (FBI), and ungated 3D fast spin-echo ghost (Ghost) magnetic resonance angiography (MRA) over a range of flow velocities in a pulsatile flow phantom with a 50\% diameter stenosis at 1.5T.},
+author = {Offerman, Erik J. and Hodnett, Philip A. and Edelman, Robert R. and Koktzoglou, Ioannis},
+doi = {10.1002/jmri.22457},
+issn = {10531807},
+journal = {Journal of Magnetic Resonance Imaging},
+keywords = {fresh blood imaging,ghost,magnetic resonance angiography,pulsatile flow phantom,quiescent-interval single-shot,time of flight},
+number = {2},
+pages = {401--408},
+pmid = {21274982},
+title = {{Nonenhanced methods for lower-extremity MRA: A phantom study examining the effects of stenosis and pathologic flow waveforms at 1.5T}},
+volume = {33},
+year = {2011}
+}
 
+@article{Bradley1984,
+abstract = {The appearance of rapidly flowing blood on imaging (MRI) was evaluated using flow phantoms and dye infusion experiments. Laminar flow can be maintained at high velocities in small-diameter vessels. Under such conditions, flow-related enhancement may be observed several slices into a multislice imaging volume. Decreasing cross-sectional area of the unsaturated protons in the midstream is noted on slices further removed from the entry surface. As the velocity increases, turbulence occurs. The increased random motion of the protons causes loss of intensity on the first-echo image, although rephasing with increased intensity can be noted on the second-echo image. The flow pattern of a simple intraluminal obstruction is demonstrated by MRI and dye infusion experiments. Rephasing is noted within the eddy downstream from the obstruction. Clinical examples of the phantom findings are shown and applications are discussed.},
+author = {Bradley, W. G. and Waluch, V. and Lai, K. S. and Fernandez, E. J. and Spalter, C.},
+issn = {0361803X},
+journal = {American Journal of Roentgenology},
+number = {6},
+pages = {1167--1174},
+pmid = {6333786},
+title = {{The appearance of rapidly flowing blood on magnetic resonance images}},
+volume = {143},
+year = {1984}
+}
 
+@MISC{ flowcompensation,
+author       = {Elster, A. D.}, 
+title        = {Flow compensation - Questions and answers in MRI}, 
+howpublished = {\url{http://http://mri-q.com/flow-compensation.html}}, 
+year         = {2014}
+}
 
-
+@article{Pattany1987,
+author = {Pattany, P M and Phillips, J J and Chiu L C and Lipcamon, J D and Duerk, J L and McNally, J M and Mohapatra, S N},
+journal = {Journal of Computer Assisted Tomography},
+mendeley-groups = {Biblio These Jeremy},
+number = {3},
+pages = {369--377},
+title = {{Motion Artifact Suppression Technique (MAST) for MR Imaging.}},
+volume = {11},
+year = {1987}
+}
 
 
 
