--- a/Annexes.tex
+++ b/Annexes.tex
@@ -38,6 +38,7 @@ avec $\beta_{123}=\frac{a_1}{2}\frac{a_2}{2}+\frac{a_1}{2}\frac{a_3}{2}+\frac{a_
 %%%
 %%%
 \section{Filtrages et traitements d’images}
+\label{sec:pretrait}
 Les acquisitions réalisées au sein de notre protocole tel que défini précédemment aboutissent
 à des images de résolutions et parfois d’orientations différentes. Il nous sera donc indispensable de
 trouver les transformations permettant de superposer une image à une autre, c’est-à-dire de les
