--- a/Chapitre3.tex
+++ b/Chapitre3.tex
@@ -8,8 +8,8 @@
 	
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-La reconstruction de la morphologie des vaisseaux est la première étape dans la construction du modèle. Les différentes modalités d’imagerie exposées au chapitre 2.2 vont assurer l’extraction quantitative à la fois de l’architecture des vaisseaux et des paramètres géométriques associés : longueurs et aire. \\
-Les images d’intérêt issues des différentes modalités d’acquisition doivent être rapportées dans le même espace : les acquisitions en contraste de phase et le T1 sont donc co-registrées (voir Appendice 1.2.2) \textcolor{red}{refaire les refs après} avec l’image disposant de la meilleure résolution, l’imagerie par temps de vol. Ce choix permet d’extraire le maximum d’informations. 
+La reconstruction de la morphologie des vaisseaux est la première étape dans la construction du modèle. Les différentes modalités d’imagerie exposées au chapitre~\ref{chap:imageriemorpho} vont assurer l’extraction quantitative à la fois de l’architecture des vaisseaux et des paramètres géométriques associés : longueurs et aire. \\
+Les images d’intérêt issues des différentes modalités d’acquisition doivent être rapportées dans le même espace : les acquisitions en contraste de phase et le $T_1$ sont donc co-registrées (voir Appendice~\ref{sec:pretrait}) avec l’image disposant de la meilleure résolution, l’imagerie par temps de vol. Ce choix permet d’extraire le maximum d’informations. 
 %%%
 %%%
 %%%
@@ -26,7 +26,7 @@ Que ce soit en imagerie par temps de vol ou en contraste de phase, les vaisseaux
 \caption{Illustration de la segmentation des artères à partir d’une image de temps de vol. A) Image ToF brute, B) Image seuillée manuellement, C) Image filtrée par le filtre de Frangi, D) Image filtrée seuillée.}
 \label{fig:2_1_segmentation_arteres}	
 \end{figure}
-Un grand nombre d’outils de segmentation existent dédiés aux images IRM. Mais ils recherchent un but spécifique : l’extraction des différents types de tissus présents dans le cerveau, la matière grise, la matière blanche, et le liquide cérébro-spinal (voir Appendice 1.2.4) \textcolor{red}{refaire les refs après}.  Les approches optimisées pour ce genre de segmentation ne peuvent pas être appliqué dans le cadre des vaisseaux. Pour ces derniers des approches dédiées ont été développées (\cite{Lesage2009}). Elles se décomposent toutes en deux étapes, chacune devant être optimisée : le prétraitement des images puis la segmentation elle-même.\\
+Un grand nombre d’outils de segmentation existent dédiés aux images IRM. Mais ils recherchent un but spécifique : l’extraction des différents types de tissus présents dans le cerveau, la matière grise, la matière blanche, et le liquide cérébro-spinal (voir Appendice~\ref{sec:pretrait}).  Les approches optimisées pour ce genre de segmentation ne peuvent pas être appliqué dans le cadre des vaisseaux. Pour ces derniers des approches dédiées ont été développées (\cite{Lesage2009}). Elles se décomposent toutes en deux étapes, chacune devant être optimisée : le prétraitement des images puis la segmentation elle-même.\\
 Les prétraitements consistent à simplifier les informations contenues dans les images d’angiographie IRM. Les traitements génériques disponibles entre lesquels il s’agît de faire un choix ont été développés dans d’autres contextes comme le sous-échantillonnage et la quantification (\cite{Tschirren2005}). Les outils les plus courants restent cependant les filtres améliorant la qualité de l’image. Citons les filtres gradients  (\cite{Koller1995}), les filtres morphologiques (\cite{Wilkinson2001}), ou les filtres à base de matrice Hessienne (\cite{Frangi1998}). \\
 A l’issue du prétraitement, les principaux algorithmes de segmentation utilisés dans des contextes vasculaires se regroupent en trois approches principales : la croissance de région, les contours actifs, les lignes médianes (\cite{Lesage2009}). La croissance de région segmente de façon incrémentielle un objet en recrutant les voxels adjacents selon certains critères comme par exemple la variation locale de l’intensité. Elle requiert le plus souvent la définition d’un point initial, qui peut être obtenu via un simple seuillage sur l’image (\cite{Boskamp2004}). Les contours actifs font évoluer une interface sous l’action de différentes forces : des forces externes calculées à partir des intensités de l’image, et des forces internes de type tension de lignes exprimant des contraintes a-priori la géométrie du contour et sa régularité (\cite{McInerney1996}). Les lignes médianes se focalisent sur l’extraction directe du centre des vaisseaux en utilisant des informations de plus haut niveaux telles que la localisation du centre du vaisseau, l’estimation de sa direction et de sa taille caractéristique (\cite{Aylward2002}).\\
 Les essais de comparaisons de ces différentes méthodes que nous avons réalisé sur ces différentes images nous ont amené à choisir la combinaison d’un prétraitement Hessien suivit d’un seuillage simple. Le filtre Hessien est en effet extrêmement robuste dans sa capacité à fournir une image très contrastée des vaisseaux, à partir de laquelle un simple seuillage ajusté manuellement (intervention de l’utilisateur) fournit un résultat qui rend superflu l’utilisation de méthodes de segmentation plus sophistiquées. \\
@@ -122,9 +122,9 @@ L’arbre vasculaire contient de nombreux vaisseaux qui se subdivisent ou se rej
 Le passage d’un squelette à une structure de graphe peut être réalisé simplement. On définit comme nœud les groupes de voxels disposants de plus de deux voisins chacun. Les groupes de voxels possédants exactement deux voisins appartiennent à des liens ou à des branches (si ils ne se connectent qu’à un nœud \cite{Kerschnitzki2013})]. Cette conversion est standard : nous avons utilisé l’implémentation de Kollmannsberger(\cite{Kerschnitzki2013}). \\
 Le passage de la segmentation brute au squelette puis au graphe conduit à l’apparition d’erreurs telles que la création de faux liens de faibles longueurs ou de fausses anastomoses (Figure~\ref{fig:2_10_boucles}). Il convient donc de les détecter et de les retirer. C’est ce que nous avons mis en place.
 %%%
-\begin{figure}[!t]
+\begin{figure}[!b]
 \centering
-\includegraphics[width=10cm]{2_10_boucles}
+\includegraphics[width=7cm]{2_10_boucles}
 \caption{Illustration de l'élimination automatique des erreurs mis en place. De haut en bas l’évolution du graphe, avec élimination des doubles liens directs, des nœuds en série, puis des segments courts.}
 \label{fig:2_10_boucles}	
 \end{figure}	
@@ -167,9 +167,9 @@ En l’état de l’imagerie nous avons sélectionné une approche simple consis
 \subsection{Estimation des paramètres des tubes}
 La distance euclidienne entre artère et veine permet de proposer une longueur totale approchée, qui correspondra à la somme des artérioles, capillaires et veinules.  Nous n’avons aucun moyen d’accéder directement aux informations morphologiques de ces compartiments. Pour limiter le nombre d’hypothèses à réaliser sur le nombre de vaisseaux, il semble plus logique de ne considérer pour chaque couple artère-veine qu’une « super-artériole », qu’un « super-capillaire », et qu’une « super-veinule » regroupant un ensemble N de vaisseaux. Bien que ces compartiments soient difficilement accessible (voir~\ref{sect:microcirculation}), la littérature nous fournit quelques informations sur les rapports de ces différents compartiments via des volumes moyens (\cite{Zagzoule1986}), \cite{Linninger2009}). Parmi celles-ci on retrouve des rapports de longueurs et de volumes. Par ailleurs~\cite{Moody2004} ont estimé la fraction de volume que représentent les artérioles et les capillaires dans la matière grise et blanche par marquage à la phosphatase alcaline. A partir de ces informations et des données issues de la segmentation, il devient possible d’estimer des volumes plausibles pour nos compartiments.\\	
 %%%
-\begin{figure}[!t]
+\begin{figure}[!b]
 \centering
-\includegraphics[width=14cm]{2_13_territoire_arteres_veines}
+\includegraphics[width=9cm]{2_13_territoire_arteres_veines}
 \caption{Illustration des territoires définit sur la base des couples artère-veine.}
 \label{fig:2_13_territoire_arteres_veines}	
 \end{figure}	
@@ -189,8 +189,8 @@ Pour les veinules, nous n’avons pas l’information de densité. Le volume est
 avec $V_a$ et $V_c$ les solutions de~\ref{eq:volumesac}, et les volumes de référence toujours donnés par la littérature.\\
 De même la longueur totale entre artères et veines est subdivisée en trois longueurs (artérioles, capillaires, veinules) sur la base des proportions fournit par la littérature (\cite{Zagzoule1986}). En l’état, faute d’informations structurales complémentaires, nous n’utilisons pas de facteurs géométriques correctifs supplémentaires (de type dimensions fractales), pour tenir compte du caractère ramifié de cette partie de la structure. \\
 A partir des volumes et des longueurs de chaque compartiment, les rayons sont déterminés simplement (Équation~\ref{eq:rayons}). \\
-Les rayons moyens des différents compartiments peuvent être visualisés (Figure~\ref{fig:2_13_profil_rayons}) et leur différences relatives mis en comparaisons aux données de la littérature (Figure 39) \textcolor{red}{lien vers la fig}. Par ailleurs, les données quantitative illustrées dans le Tableau~\ref{table:tab_profil_rayons} montrent des longueurs du même ordre de grandeur (bien que souvent plus élevés dans le modèle de Zagzoule et al.). On voit ainsi que des artères aux veines, les proportions des caractéristiques des différents tubes sont comparables. En revanche l'écart est important en terme de nombres d'artères et de veines est important, ce qui s'explique par d'une part : le niveau de détails de notre segmentation et d'autres part le fait les données de Zagzoule et al. ne sont pas issues directement de données terrain, mais des estimations.\\
-BraVa, pour {\em The Brain Vasculature}, fournit une base donnée de l'architecture artérielle dans le cerveau \textcolor{green}{Susan N. Wright, Peter Kochunov, Fernando Mut Maurizio Bergamino, Kerry M. Brown, John C. Mazziotta, Arthur W. Toga, Juan R. Cebral, Giorgio A. Ascoli. Digital reconstruction and morphometric analysis of human brain arterial vasculature from magnetic resonance angiography. NeuroImage, 82, 170-181, (2013). http://dx.doi.org/10.1016/j.neuroimage.2013.05.089}. Pour construire cette base, 61 patients (âge 31.16 \textcolor{red}{+/-}10.03) ont subit une imagerie IRM par temps de vol (résolution 0.6 x 0.6 x 0.6mm\^3) . Pour chaque sujet, une identification manuelle des artères a été réalisée via ImageJ et le plugin Neuron\_Morpho {\em http://www.personal.soton.ac.uk/dales/morpho/}. Ainsi une identification fine du nombre de segments et de leurs caractéristiques (longueur, tortuosité etc.) est disponible et mis à disposition en ligne. La comparaison de nos mesures aux données de BraVa permet d'évaluer l'écart de notre modèle à des données similaires. Le résultat met en évidence un nombre inférieur de moitié en terme de branches de notre méthode en rapport de BraVa. Au vue de l'approche manuelle privilégié par ce dernier ce résultat est cohérent. La longueur moyenne des segments en revanche est cohérente, bien que des écarts peuvent exister du fait de l'écart précédement décrit. On notera par ailleurs que les longueurs sont plus faibles que celles initialement utilisées par Zagzoule et al.. Les informations sur les calibres des vaisseaux ne sont cependant pas disponibles. \\
+Les rayons moyens des différents compartiments peuvent être visualisés (Figure~\ref{fig:2_13_profil_rayons}) et leur différences relatives mis en comparaisons aux données de la littérature (par exemple dans le chapitre suivanrt figure~\ref{fig:4_3_zagzoule}). Par ailleurs, les données quantitative illustrées dans le Tableau~\ref{table:tab_profil_rayons} montrent des longueurs du même ordre de grandeur (bien que souvent plus élevés dans le modèle de Zagzoule et al.). On voit ainsi que des artères aux veines, les proportions des caractéristiques des différents tubes sont comparables. En revanche l'écart est important en terme de nombres d'artères et de veines est important, ce qui s'explique par d'une part : le niveau de détails de notre segmentation et d'autres part le fait les données de Zagzoule et al. ne sont pas issues directement de données terrain, mais des estimations.\\
+BraVa, pour {\em The Brain Vasculature}, fournit une base donnée de l'architecture artérielle dans le cerveau (\cite{Wright2013}). Pour construire cette base, 61 patients (âge 31.16 \textcolor{red}{+/-}10.03) ont subit une imagerie IRM par temps de vol (résolution 0.6 x 0.6 x 0.6mm\^3) . Pour chaque sujet, une identification manuelle des artères a été réalisée via ImageJ et le plugin Neuron\_Morpho (\cite{neuronmorpho}). Ainsi une identification fine du nombre de segments et de leurs caractéristiques (longueur, tortuosité etc.) est disponible et mis à disposition en ligne. La comparaison de nos mesures aux données de BraVa permet d'évaluer l'écart de notre modèle à des données similaires. Le résultat met en évidence un nombre inférieur de moitié en terme de branches de notre méthode en rapport de BraVa. Au vue de l'approche manuelle privilégié par ce dernier ce résultat est cohérent. La longueur moyenne des segments en revanche est cohérente, bien que des écarts peuvent exister du fait de l'écart précédement décrit. On notera par ailleurs que les longueurs sont plus faibles que celles initialement utilisées par Zagzoule et al.. Les informations sur les calibres des vaisseaux ne sont cependant pas disponibles. \\
 
 %%%
 
