--- a/Chapitre5.tex
+++ b/Chapitre5.tex
@@ -453,7 +453,7 @@ et {\em exfCerv} correspond au fluide extracellulaire dans les deux hémisphère
 cellulaire solide, $V$ la somme des volumes pour chaque compartiment.\\
 \afterpage{%
     \clearpage% Flush earlier floats (otherwise order might not be correct)
-    \thispagestyle{empty}
+    %\thispagestyle{empty}
 	\begin{landscape}
 	\begin {table}
 	\captionof{table}{Tableau résumant les données utilisées dans les différents modèles de type compartiments de la littérature.} 
@@ -656,7 +656,7 @@ plus importante de la pression.\\
 %%%
 \begin{figure}[!t]
 \centering
-\includegraphics[width=15cm]{4_15_evolution_pression}
+\includegraphics[width=11cm]{4_15_evolution_pression}
 \caption{Evolution des pressions d'un type de compartiment à l'autre et comparaison avec les modèles similaires. Les
 barres sont positionnées au vue de l’emplacement des mesures de pressions dans les différents modèles.}
 \label{fig:4_15_evolution_pression}	
@@ -668,7 +668,7 @@ que l’on avance dans le réseau vasculaire ou ventriculaire. Les pressions moy
 cinétiques cohérentes. Le modèle prédit une pression pulsatile de 3.5 mmHg en accord avec les
 données connues (3 – 5 mmHg) (\cite{Czosnyka2005}).\\
 %%%
-\begin{figure}[!t]
+\begin{figure}[!b]
 \centering
 \includegraphics[width=15cm]{4_16_decours_pression}
 \caption{Evolution des pressions moyennes de chaque type de compartiment. A gauche les vaisseaux, à droite les
@@ -693,9 +693,9 @@ limites.\\
 \end{figure}
 %%%
 %%%
-\begin{figure}[!t]
+\begin{figure}[!b]
 \centering
-\includegraphics[width=13cm]{4_27_segmentation}
+\includegraphics[width=8cm]{4_27_segmentation}
 \caption{Segmentation des artères dans un territoire où l'écart entre l'ASL et le modèle est important. En rouge est représenté la segmentation. La flèche orange indique l'artère correspondante au territoire d'intérêt, les flèches blanches mettent en évidence deux autres branches associées à cette artère qui n'ont pas été segmentées.}
 \label{fig:4_27_segmentation}	
 \end{figure}
@@ -728,9 +728,9 @@ avec une amplitude de 0.33 mL/sec. Le modèle est donc en bon accord avec les do
 Enfin l’évolution de l’aire est elle aussi gérée par le modèle et est cohérente avec l’évolution des
 pressions (Figure~\ref{fig:4_20_aire_artere}), quoi que plus difficile à valider expérimentalement compte tenu de la résolution.\\
 %%%
-\begin{figure}[!t]
+\begin{figure}[!b]
 \centering
-\includegraphics[width=15cm]{4_19_debit_ventriculaire}
+\includegraphics[width=10cm]{4_19_debit_ventriculaire}
 \caption{Estimation par le modèle des débits dans les compartiments ventriculaires.}
 \label{fig:4_19_debit_ventriculaire}	
 \end{figure}
@@ -749,7 +749,7 @@ des entrées puis une chute jusqu’aux capillaires. Les veines récupèrent ens
 vers le sinus veineux ce qui se traduit par une augmentation du débit. Les artères communicantes
 (postérieure gauche et antérieure) présentent des débits très faible (violet foncé) (Figure\ref{fig:4_21_debit_moyen}).\\
 %%%
-\begin{figure}[!t]
+\begin{figure}[!b]
 \centering
 \includegraphics[width=15cm]{4_21_debit_moyen}
 \caption{Débits moyens dans les différentes artères et veines du modèle. A gauche la répartition pour le modèle initial du
@@ -801,7 +801,7 @@ expliquer les écarts de ce type.\\
 %%%
 \begin{figure}[!t]
 \centering
-\includegraphics[width=15cm]{4_23_compensation_ACoA}
+\includegraphics[width=11cm]{4_23_compensation_ACoA}
 \caption{ Degré de compensation de l'ACoA lors de l'occlusion du premier segment de l'ACA droite en fonction du diamètre
 de l'ACoA. La compensation est représentée comme le rapport entre le débit dans le segment en aval de l’ACoA après
 occlusion et avant l’occlusion. Les lignes en pointillées orange indiquent l’intervalle de variation de la sigmoïde
