--- a/jeremythesebib.bib
+++ b/jeremythesebib.bib
@@ -2789,7 +2789,25 @@ volume = {11},
 year = {1987}
 }
 
+@article{Wright2013,
+abstract = {Characterization of the complex branching architecture of cerebral arteries across a representative sample of the human population is important for diagnosing, analyzing, and predicting pathological states. Brain arterial vasculature can be visualized by magnetic resonance angiography (MRA). However, most MRA studies are limited to qualitative assessments, partial morphometric analyses, individual (or small numbers of) subjects, proprietary datasets, or combinations of the above limitations. Neuroinformatics tools, developed for neuronal arbor analysis, were used to quantify vascular morphology from 3. T time-of-flight MRA high-resolution (620. ??m isotropic) images collected in 61 healthy volunteers (36/25 F/M, average age. =. 31.2. ??. 10.7, range. =. 19-64. years). We present in-depth morphometric analyses of the global and local anatomical features of these arbors. The overall structure and size of the vasculature did not significantly differ across genders, ages, or hemispheres. The total length of the three major arterial trees stemming from the circle of Willis (from smallest to largest: the posterior, anterior, and middle cerebral arteries; or PCAs, ACAs, and MCAs, respectively) followed an approximate 1:2:4 proportion. Arterial size co-varied across individuals: subjects with one artery longer than average tended to have all other arteries also longer than average. There was no net right-left difference across the population in any of the individual arteries, but ACAs were more lateralized than MCAs. MCAs, ACAs, and PCAs had similar branch-level properties such as bifurcation angles. Throughout the arterial vasculature, there were considerable differences between branch types: bifurcating branches were significantly shorter and straighter than terminating branches. Furthermore, the length and meandering of bifurcating branches increased with age and with path distance from the circle of Willis. All reconstructions are freely distributed through a public database to enable additional analyses and modeling (cng.gmu.edu/brava). ?? 2013 Elsevier Inc.},
+author = {Wright, Susan N. and Kochunov, Peter and Mut, Fernando and Bergamino, Maurizio and Brown, Kerry M. and Mazziotta, John C. and Toga, Arthur W. and Cebral, Juan R. and Ascoli, Giorgio A.},
+doi = {10.1016/j.neuroimage.2013.05.089},
+isbn = {1053-8119},
+issn = {10538119},
+journal = {NeuroImage},
+pages = {170--181},
+pmid = {23727319},
+title = {{Digital reconstruction and morphometric analysis of human brain arterial vasculature from magnetic resonance angiography}},
+volume = {82},
+year = {2013}
+}
 
-
+@MISC{ neuronmorpho,
+author       = {D'Alessandro, G., A. D.}, 
+title        = {Neuron Morpho Plugin for ImageJI}, 
+howpublished = {\url{http://http://http://www.personal.soton.ac.uk/dales/morpho/}}, 
+year         = {2001}
+}
 
 
